tests/ui/opener_missing_secret_key.stderr
error[E0599]: no method named `open` found for struct `DecryptorBuilder<crypt_guard::MissingSecretKey, crypt_guard::MlKem768>` in the current scope
  --> tests/ui/opener_missing_secret_key.rs:17:61
   |
17 |     let _ = Decryptor::<MlKem768, XChaCha20Poly1305>::new().open(&envelope);
   |                                                             ^^^^ method not found in `DecryptorBuilder<crypt_guard::MissingSecretKey, crypt_guard::MlKem768>`
   |
   = note: the method was found for
           - `DecryptorBuilder<WithSecretKey, K, A>`
